# leila

./: chatbot.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
categories/: WIKI Nutrition.txt  adocantes.txt  bebidas.txt  clinica.txt  json_produtos_formatted.json  omega.txt  outros.txt  selections.txt  snacks.txt  treino.txt
data/: colagenos.txt  proteinas.txt
leila_chatbot/: chatbot.py  create_retriever.py  preprocess.py  preprocess_queries.py
tests/: base_context_test.py  chroma_json_db_test.py  chroma_pdf_db_test.py  final_chain_test.py
