[tool.poetry]
name = "leila-chatbot"
version = "0.1.0"
description = ""
authors = ["davi lage <davilage.borges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jq = "^1.7.0"
chromadb = "^0.4.24"
pypdf = "^4.2.0"
fastapi = "^0.110.2"
langchain-openai = "^0.1.3"
langchain-community = "^0.0.33"
langchain-core = "^0.1.44"
langchain = "^0.1.16"
langchainhub = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
